Added link to <nav>

--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" href="index.html#projects" title="Click">My projects</a>
+              <a class="nav-link" href="index.html" title="Click">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about.html" title="Click">About me</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="index.html#certificates" title="Click">My certificates</a>
