--- a/projects.html
+++ b/projects.html
@@ -58,104 +58,44 @@
       </div>
     </nav>
 
-    <div class="main-container">
-      <h1><bold>Profile</bold></h1>
-      <h2>Front-end developer, based in Europe</h2> 
-      <div class="about-me">
-        <div class="container text-center">
-            <div class="row">
-              <div class="col">
-               <h3> About me</h3>
-               <p class="story">
-                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-                 Numquam aperiam provident tempora? Cumque adipisci, 
-                 non dolorem quia, odit qui alias veniam excepturi rem dolor fugit dignissimos,
-                 sed voluptatum blanditiis harum. Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                  Numquam aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui alias veniam excepturi rem 
-                  dolor fugit dignissimos, sed voluptatum blanditiis harum. Lorem ipsum dolor sit amet.
-               </p>
-              </div>
-              <div class="col">
-                <img src="images/my-photo.jpeg" class="my-photo" alt="" width="300"/>
-              </div>
-              <div class="col">
-                <h4>Details</h4>
-                <p class="details">
-                  <strong>Name:</strong> Yullia Kadran
-                  </br>
-                  <strong>Age:</strong> 29 years
-                  </br>
-                 <strong>Location:</strong> Ukraine
-                 </br>
-                </p>
-                <div class="navigation">
-                 <a href="index.html#cont-me" class="contact" title="Click">Contact me</a>
-                </div>
-              </div>
-          </div>
-        </div>
-      </div>
-
-    <h5>My projects</h5>
-    <div id="projects" class="projects-container mt-20">
-      <div class="row">
-          <div class="col-sm-6 text-center">
-            <img src="images/croissant.jpeg" alt="yoga" class="projects-img-fluid rounded" width="450" height="420" />
-          </div>
-          <div class="col-sm-6 text-start   p-2 m-0">
-            <p class="project-title">Croissant Web</p>
-            <p class="projects-p ">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-              Perferendis quia, dignissimos nam ratione veniam quibusdam 
-              porro omnis quam vel eos eveniet alias temporibus deserunt 
-              veritatis minima fugiat explicabo eum dolore.
-            </p>
-            <a href="index.html" class="link" title="Click">Learn more</a>
-          </div>
-          <div class="col-sm-6 text-start  p-2 m-0">
-             <p class="project-title">Weather App</p>
-             <p class="projects-p ">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-              quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
-              eos eveniet alias temporibus deserunt veritatis minima fugiat
-              explicabo eum dolore.
-             </p>
-             <a href="index.html" class="link" title="Click">Learn more</a>
-          </div>
-          <div class="col-sm-6 text-start">
-            <img src="images/weather-app.jpeg" alt="weather" class="projects-img-fluid rounded" width="500" height="350"  />
-        </div>
-    </div>
-    <div id="certificates" class="certificates">
-     <h5>My certificates</h5>
-     <div class="row">
-        <div class="col">
-          <img src="images/cert-1.jpeg" alt="yoga" class="cert-img-fluid rounded pb-40" width="440" height="320" />
-        </div>
-        <div class="col">
-          <img src="images/cert-2.jpeg" alt="yoga" class="cert-img-fluid rounded pb-40" width="440" height="320" />
-        </div>
-      </div>
-    </div>
-    <div id="cont-me" class="contacts" >
-      <h5>My contacts:</h5>
-      <p class="info">
-        <a class="email" href="mailto:juliakadran@gmail.com">
-          juliakadran@gmail.com </a>
-          </br>
-          +38(063)659-18-03
-          </br>
-          <i class="fa-brands fa-instagram "></i>
-          <i class="fa-brands fa-linkedin-in"></i>
-      </p>
-    </div>
   
-    
-    <footer> 
-      <a href="index.html" class="back-home" title="Click">Back to homepage</a>
-    </br>
+
+    <h1> Take a look at what I've have been working on!</h1>
+    <h2>My projects</h2>
+
+    <div id="projects" class="projects-container mt-20"></div>
+     <div class="row">
+        <div class="col-sm-6 text-center">
+          <img src="images/croissant.jpeg" alt="yoga" class="projects-img-fluid rounded" width="450" height="420" />
+        </div>
+        <div class="col-sm-6 text-start   p-2 m-0">
+          <p class="t-croissant">Croissant Web</p>
+          <p class="p-croissant ">
+             Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+             Perferendis quia, dignissimos nam ratione veniam quibusdam 
+             porro omnis quam vel eos eveniet alias temporibus deserunt 
+             veritatis minima fugiat explicabo eum dolore.
+          </p>
+        </div>
+
+        <div class="col-sm-6 text-start  p-2 m-0">
+          <p class="t-weather">Weather App</p>
+          <p class="p-weather ">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+             quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
+            eos eveniet alias temporibus deserunt veritatis minima fugiat
+             explicabo eum dolore.
+          </p>
+        </div>
+        <div class="col-sm-6 text-start">
+          <img src="images/weather-app.jpeg" alt="weather" class="projects-img-fluid rounded" width="500" height="350"  />
+        </div>
+      </div>
+    </div>
    
-    </footer>
+   
+  
+
   </body>
     
 </html>
