Changed the link in navigation

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               <a class="nav-link" href="about.html" title="Click">About me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="index.html#certificates" title="Click">My certificates</a>
+            <a class="nav-link" href="projects.html" title="Click">My projects</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="index.html#cont-me"title="Click">Contact me</a>
