Made changes in index.html @media

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <a class="nav-link" href="projects.html" title="Click">My projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="index.html#cont-me"title="Click">Contact me</a>
+              <a class="nav-link" href="contact.html"title="Click">Contact me</a>
             </li>
           </ul>
         </div>
@@ -127,7 +127,7 @@
         </div>
     </div>
     <div id="certificates" class="certificates">
-     <h5>My certificates</h5>
+     <h6>My certificates</h6>
      <div class="row">
         <div class="col">
           <img src="images/cert-1.jpeg" alt="yoga" class="cert-img-fluid rounded pb-40" width="440" height="320" />
@@ -138,7 +138,7 @@
       </div>
     </div>
     <div id="cont-me" class="contacts" >
-      <h5>My contacts:</h5>
+      <h7>My contacts:</h7>
       <p class="info">
         <a class="email" href="mailto:juliakadran@gmail.com">
           juliakadran@gmail.com </a>
