Made contscts.html

--- a/contact.html
+++ b/contact.html
@@ -58,23 +58,23 @@
       </div>
     </nav>
 
-   <div class="main-comtainer"></div>
-     <h1><bold>Let's get in touch!</bold></h1>
+   <h1>Let's be in touch!</h1>
+   <div class="contacts">
+      <div class="info"></div>
+          <h2>My contacts:</h2>
+            <p class="phone"> +38(063)659-18-03 
+              </br>
+              <div class="icons">
+                <i class="fa-brands fa-facebook-f"></i>
+               <i class="fa-brands fa-instagram "></i>
+               <i class="fa-brands fa-linkedin-in"></i>
+              </div>
+           </p>
+      </div>
+      
+      <button type="button" class="btn btn-light"><a class="email" href="mailto:juliakadran@gmail.com">E-mail me </a></button>
+    </div>
 
-     <div id="cont-me" class="contacts" >
-         <h2>My contacts:</h2>
-         <p class="info">
-            <a class="email" href="mailto:juliakadran@gmail.com">
-            juliakadran@gmail.com </a>
-            </br>
-            +38(063)659-18-03
-            </br>
-            <i class="fa-brands fa-instagram "></i>
-            <i class="fa-brands fa-linkedin-in"></i>
-        </p>
-     </div>
-  </div>
-  
     
   
   </body>
