--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" href="index.html" title="Click">Home</a>
+              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="about.html" title="Click">About me</a>
@@ -57,7 +57,7 @@
         </div>
       </div>
     </nav>
-
+    
    <h1>Let's be in touch!</h1>
    <div class="contacts">
       <div class="info"></div>
