--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
 
   <body>
 
-    <nav class="navbar navbar-expand-lg" style="background-color: #bceee8;">
+     <nav class="navbar navbar-expand-lg" style="background-color: #bceee8;">
       <div class="container-fluid">
         <a class="navbar-brand" href="#" title="Yuliia Kadran">Yuliia Kadran</a>
         <button
@@ -41,17 +41,17 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-             <li class="nav-item">
-              <a class="nav-link" href="index.html" title="Click">Home</a>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="index.html#projects" title="Click">My projects</a>
+              <a class="nav-link" href="about.html" title="Click">About me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="index.html#certificates" title="Click">My certificates</a>
+            <a class="nav-link" href="projects.html" title="Click">My projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="index.html#cont-me"title="Click">Contact me</a>
+              <a class="nav-link" href="contact.html"title="Click">Contact me</a>
             </li>
           </ul>
         </div>
