--- a/index.html
+++ b/index.html
@@ -103,15 +103,15 @@
     <div id="projects" class="projects">
       <div class="row">
         <div class="col">
-          <h5 class="card-title">Croissant Web</h5>
-          <img src="images/croissant.jpeg" alt="" class="pic-img-fluid rounded pb-40" width="450" height="340" />
+          <h5 class="card-title-croissant">Croissant Web</h5>
+          <img src="images/croissant.jpeg" alt="" class="prj-img-fluid rounded pb-40" width="450" height="340" />
           <div class="card-body">
               <a href="projects.html" class="link-p">Learn more</a>
             </div>
         </div>
         <div class="col">
-          <h5 class="card-title">Weather App</h5>
-          <img src="images/weather-app.jpeg" alt="" class="pic-img-fluid rounded pb-40" width="440" height="320" />
+          <h5 class="card-title-weather">Weather App</h5>
+          <img src="images/weather-app.jpeg" alt="" class="prj-img-fluid rounded pb-40" width="440" height="320" />
           <div class="card-body">
               <a href="projects.html" class="link-p">Learn more</a>
             </div>
@@ -123,10 +123,10 @@
      <h6>My certificates</h6>
      <div class="row">
         <div class="col">
-          <img src="images/cert-1.jpeg" alt="" class="pic-img-fluid rounded pb-40" width="440" height="320" />
+          <img src="images/cert-1.jpeg" alt="" class="cert-img-fluid rounded pb-40" width="440" height="320" />
         </div>
         <div class="col">
-          <img src="images/cert-2.jpeg" alt="" class="pic-img-fluid rounded pb-40" width="440" height="320" />
+          <img src="images/cert-2.jpeg" alt="" class="cert-img-fluid rounded pb-40" width="440" height="320" />
         </div>
       </div>
     </div>
