Added footer to contact.html and about.html

--- a/projects.html
+++ b/projects.html
@@ -69,9 +69,12 @@
           <img src="images/croissant.jpeg" alt="yoga" class="projects-img-fluid rounded" width="450" height="420" />
         </div>
         <div class="col-sm-6 text-start   p-2 m-0">
-          <p class="t-croissant">Croissant Web</p>
+          <h3>Croissant Web</h3>
           <p class="p-croissant ">
              Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+             Perferendis quia, dignissimos nam ratione veniam quibusdam 
+             porro omnis quam vel eos eveniet alias temporibus deserunt 
+             veritatis minima fugiat explicabo eum dolore. Lorem ipsum dolor sit amet consectetur adipisicing elit. 
              Perferendis quia, dignissimos nam ratione veniam quibusdam 
              porro omnis quam vel eos eveniet alias temporibus deserunt 
              veritatis minima fugiat explicabo eum dolore.
@@ -79,12 +82,15 @@
         </div>
 
         <div class="col-sm-6 text-start  p-2 m-0">
-          <p class="t-weather">Weather App</p>
+          <h4>Weather App</h4>
           <p class="p-weather ">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
              quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
-            eos eveniet alias temporibus deserunt veritatis minima fugiat
-             explicabo eum dolore.
+             eos eveniet alias temporibus deserunt veritatis minima fugiat
+             explicabo eum dolore. Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+             Perferendis quia, dignissimos nam ratione veniam quibusdam 
+             porro omnis quam vel eos eveniet alias temporibus deserunt 
+             veritatis minima fugiat explicabo eum dolore.
           </p>
         </div>
         <div class="col-sm-6 text-start">
@@ -92,6 +98,12 @@
         </div>
       </div>
     </div>
+     
+     <footer> This project was coded by Yuliia Kadran,
+      <a href = "https://github.com/JKadran/NEW-PROJECT-ABOUT-ME">open-sourced.</a></br>2022</a>
+    </footer>
+  
+     
    
    
   
