Changed footer in about.html and contscts.html

--- a/contact.html
+++ b/contact.html
@@ -76,7 +76,8 @@
     </div>
 
     <footer>
-      <p class="source">This project was coded by Yuliia Kadran,<a href = "https://github.com/JKadran/NEW-PROJECT-ABOUT-ME">open-sourced.</a></br>2022</a></p>
+      <p class="source">This project was coded by Yuliia Kadran,
+      <a href = "https://github.com/JKadran/NEW-PROJECT-ABOUT-ME">open-sourced.</a></br>2022</a></p>
    
     </footer>
   
