--- a/about.html
+++ b/about.html
@@ -69,19 +69,16 @@
                   I started studying myself, reading articles, watching lectures on YouTube.I was lucky. Eventually, I found a course "She Codes" for women and am currently studying.
                 </p>
               </div>
-              <div class="navigation">
-                <a href="index.html#cont-me" class="contact" title="Click">Contact me</a>
-              </div>
               <div class="col">
                 <img src="images/my-photo.jpeg" class="my-photo" alt="" width="450"/>
+              </div>
+              <div class="navigation">
+                <a href="contact.html" class="contact" title="Click">Contact me</a>
               </div>
           </div>
       </div>
     
-        
-   
-
-    <footer> This project was coded by Yuliia Kadran,
+     <footer> This project was coded by Yuliia Kadran,
       <a href = "https://github.com/JKadran/NEW-PROJECT-ABOUT-ME">open-sourced.</a></br>2022</a>
     </footer>
   
