--- a/projects.html
+++ b/projects.html
@@ -59,8 +59,7 @@
     </nav>
 
   
-
-    <h1> Take a look at what I've have been working on!</h1>
+   <div class="main-container"><h1> Take a look at what I've have been working on!</h1>
     <h2>My projects</h2>
 
     <div id="projects" class="projects-container mt-20"></div>
@@ -102,6 +101,8 @@
      <footer> This project was coded by Yuliia Kadran,
       <a href = "https://github.com/JKadran/NEW-PROJECT-ABOUT-ME">open-sourced.</a></br>2022</a>
     </footer>
+  </div>
+    
   
      
    
