Changed the link

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                  </br>
                 </p>
                 <div class="navigation">
-                 <a href="index.html#cont-me" class="contact" title="Click">Contact me</a>
+                 <a href="contact.html" class="contact" title="Click">Contact me</a>
                 </div>
               </div>
           </div>
