--- a/projects.html
+++ b/projects.html
@@ -59,12 +59,12 @@
     </nav>
 
   
-   <div class="main-container">
+  
       <h1> Take a look at what I've have been working on!</h1>
       <h2>My projects</h2>
 
-      <div id="projects" class="projects-container mt-20"></div>
-      <div class="row">
+      <div id="projects" class="projects-container mt-20">
+       <div class="row">
           <div class="col-sm-6 text-center">
             <img src="images/croissant.jpeg" alt="yoga" class="projects-img-fluid rounded" width="450" height="420" />
           </div>
@@ -96,8 +96,9 @@
           <div class="col-sm-6 text-start">
             <img src="images/weather-app.jpeg" alt="weather" class="projects-img-fluid rounded" width="500" height="350"  />
           </div>
+        </div>
       </div>
-   </div>
+ 
 
      
      <footer> This project was coded by Yuliia Kadran,
