--- a/about.html
+++ b/about.html
@@ -73,13 +73,13 @@
           <img src="images/my-photo.jpeg" class="my-photo" alt="" width="350"/>
         </div>
         <div class="navigation">
-          <a href="contact.html" class="contact" title="Click">Contact me</a>
+          <a href="contact.html" class="contact" target="_blank" title="Click">Contact me</a>
         </div>
       </div>
     </div>
     
    <footer> This project was coded by Yuliia Kadran,
-      <a href = "https://github.com/JKadran/NEW-PROJECT-ABOUT-ME">open-sourced.</a></br>2022</a>
+      <a href = "https://github.com/JKadran/NEW-PROJECT-ABOUT-ME" target="_blank">open-sourced.</a></br>2022</a>
    </footer>
     </div>
     
