--- a/contact.html
+++ b/contact.html
@@ -75,11 +75,11 @@
         </div>
       </div>
         
-      <button type="button" class="btn btn-light"><a class="email" href="mailto:juliakadran@gmail.com">E-mail me </a></button>
+      <button type="button" class="btn btn-light"><a class="email" href="mailto:juliakadran@gmail.com" target="_blank">E-mail me </a></button>
     
       <footer>
         <p class="source">This project was coded by Yuliia Kadran,
-        <a href = "https://github.com/JKadran/NEW-PROJECT-ABOUT-ME">open-sourced.</a></br>2022</a></p>
+        <a href = "https://github.com/JKadran/NEW-PROJECT-ABOUT-ME" target="_blank">open-sourced.</a></br>2022</a></p>
       </footer>
 
    </div>
