--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                </p>
               </div>
               <div class="col">
-                <img src="images/my-photo.jpeg" class="my-photo" alt="" width="300"/>
+                <img src="images/my-photo.jpeg" class="my-photo" alt="my-pic" width="300"/>
               </div>
               <div class="col">
                 <h4>Details</h4>
@@ -89,7 +89,7 @@
                  </br>
                 </p>
                 <div class="navigation">
-                 <a href="contact.html" class="contact" title="Click">Contact me</a>
+                 <a href="contact.html" class="contact"  title="Click">Contact me</a>
                 </div>
               </div>
           </div>
@@ -104,16 +104,16 @@
       <div class="row">
         <div class="col">
           <h5 class="card-title-croissant">Croissant Web</h5>
-          <img src="images/croissant.jpeg" alt="" class="prj-img-fluid rounded pb-40" width="450" height="340" />
+          <img src="images/croissant.jpeg" alt="bread" class="prj-img-fluid rounded pb-40" width="450" height="340" />
           <div class="card-body">
-              <a href="projects.html" class="link-p">Learn more</a>
+              <a href="projects.html" target="_blank" class="link-p">Learn more</a>
             </div>
         </div>
         <div class="col">
           <h5 class="card-title-weather">Weather App</h5>
-          <img src="images/weather-app.jpeg" alt="" class="prj-img-fluid rounded pb-40" width="440" height="320" />
+          <img src="images/weather-app.jpeg" alt="app" class="prj-img-fluid rounded pb-40" width="440" height="320" />
           <div class="card-body">
-              <a href="projects.html" class="link-p">Learn more</a>
+              <a href="projects.html"  target="_blank" class="link-p">Learn more</a>
             </div>
         </div>
       </div>
@@ -123,16 +123,16 @@
      <h6>My certificates</h6>
      <div class="row">
         <div class="col">
-          <img src="images/cert-1.jpeg" alt="" class="cert-img-fluid rounded pb-40" width="440" height="320" />
+          <img src="images/cert-1.jpeg" alt="course" class="cert-img-fluid rounded pb-40" width="440" height="320" />
         </div>
         <div class="col">
-          <img src="images/cert-2.jpeg" alt="" class="cert-img-fluid rounded pb-40" width="440" height="320" />
+          <img src="images/cert-2.jpeg" alt="course" class="cert-img-fluid rounded pb-40" width="440" height="320" />
         </div>
       </div>
      </div>
 
      <footer> This project was coded by Yuliia Kadran,
-      <a href = "https://github.com/JKadran/NEW-PROJECT-ABOUT-ME">open-sourced.</a></br>2022</a></footer>
+      <a href = "https://github.com/JKadran/NEW-PROJECT-ABOUT-ME" target="_blank">open-sourced.</a></br>2022</a></footer>
     </div>
   </body>
     
