Improoved the about.html

--- a/contact.html
+++ b/contact.html
@@ -26,9 +26,9 @@
 
   <body>
 
-    <nav class="navbar navbar-expand-lg" style="background-color: #bceee8;">
+     <nav class="navbar navbar-expand-lg" style="background-color: #bceee8;">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#" title="Yuliia Kadran"><bold>Yuliia Kadran</bold></a>
+        <a class="navbar-brand" href="#" title="Yuliia Kadran">Yuliia Kadran</a>
         <button
           class="navbar-toggler"
           type="button"
