--- a/projects.html
+++ b/projects.html
@@ -66,7 +66,7 @@
       <div id="projects" class="container mt-20">
        <div class="row">
           <div class="col-sm-6 text-center">
-            <img src="images/croissant.jpeg" alt="course" class="projects-img-fluid rounded" width="450" height="420" />
+            <img src="images/croissant.jpeg" alt="course" class=" projects-img-croissant-fluid rounded" width="450" height="420" />
           </div>
           <div class="col-sm-6 text-start   p-2 m-0">
             <h3>Croissant Web</h3>
@@ -94,7 +94,7 @@
             </p>
           </div>
           <div class="col-sm-6 text-start">
-            <img src="images/weather-app.jpeg" alt="course" class="projects-img-fluid rounded" width="500" height="350"  />
+            <img src="images/weather-app.jpeg" alt="course" class="projects-img-weather-fluid rounded" width="500" height="350"  />
           </div>
         </div>
       </div>
